--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,3 +1,37 @@
-<p>
-  login works!
-</p>
+<section>
+  <form
+      [formGroup]="loginForm"
+      (ngSubmit)="onSubmit()"
+      fxLayout="column"
+      fxLayoutAlign="center center"
+      fxLayoutGap="10px">
+    <mat-form-field hintLabel="Enter the email you signed up with.">
+      <input 
+        type="email"
+        formControlName="email"
+        matInput
+        placeholder="Your email">
+      <mat-error 
+          *ngIf="!(loginForm.get('email').valid && loginForm.get('email').touched)">
+        You have to enter your valid email.
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <input 
+          type="password"
+          formControlName="password"
+          matInput
+          placeholder="Your password">
+      <mat-error>
+        Please enter your password.
+      </mat-error>
+    </mat-form-field>
+    <button
+        [disabled]="!loginForm.valid"
+        type="submit"
+        mat-raised-button
+        color="primary">
+      Login
+    </button>
+  </form>
+</section>
