--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -58,7 +58,7 @@
         type="submit"
         mat-raised-button
         color="primary">
-      Submit
+      Sign Up
     </button>
   </form>
 </section>
