--- a/src/app/components/training/current-training/current-training.component.html
+++ b/src/app/components/training/current-training/current-training.component.html
@@ -1,3 +1,18 @@
-<p>
-  current-training works!
-</p>
+<section
+    class="current-training"
+    fxLayout="column"
+    fxLayoutAlign="center center">
+  <mat-progress-spinner
+      mode="determinate"
+      [value]="progress"
+      color="primary">
+  </mat-progress-spinner>
+  <h1>Your progress {{ progress }}%</h1>
+  <p>Keep on going, you can do it!</p>
+  <button
+      mat-raised-button
+      (click)="onStop()"
+      color="accent">
+    Stop
+  </button>
+</section>
