--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,3 +1,19 @@
-<p>
-  welcome works!
-</p>
+<div
+    fxLayout="column"
+    fxLayout.gt-md="row"
+    fxLayoutAlign="center center"
+    fxLayoutGap.gt-md="20px"
+    class="welcome">
+  <section>
+    <h1>ACTIVITY</h1>
+    <p>Stay active and enjoy better health and more fun!</p>
+  </section>
+  <section>
+    <h1>COMMUNITY</h1>
+    <p>Get to know other people who share your passion</p>
+  </section>
+  <section>
+    <h1>CHALLENGES</h1>
+    <p>Never stop! Dive into new challengers every day</p>
+  </section>
+</div>
