--- a/src/app/components/training/current-training/current-training.component.html
+++ b/src/app/components/training/current-training/current-training.component.html
@@ -7,7 +7,7 @@
       [value]="progress"
       color="primary">
   </mat-progress-spinner>
-  <h1>Your progress {{ progress }}%</h1>
+  <h1>{{ currentExercise.name }} {{ progress }}%</h1>
   <p>Keep on going, you can do it!</p>
   <button
       mat-raised-button
