--- a/src/app/components/training/new-training/new-training.component.html
+++ b/src/app/components/training/new-training/new-training.component.html
@@ -2,40 +2,38 @@
     fxLayout="row"
     fxLayoutAlign="center center"
     class="new-training">
-  <mat-card fxFlex="400px" fxFlex.lt-md="100%">
-    <mat-card-title fxLayoutAlign="center center">
-      Time to start a workout!
-    </mat-card-title>
-    <mat-card-content fxLayoutAlign="center center">
-      <mat-form-field>
-        <mat-select placeholder="Choose your exercise">
-          <mat-option value="crunches">
-            Crunches
-          </mat-option>
-          <mat-option value="touch-toes">
-            Touch Toes
-          </mat-option>
-          <mat-option value="pushups">
-            Pushups
-          </mat-option>
-          <mat-option value="side-lunges">
-            Side Lunges
-          </mat-option>
-          <mat-option value="burpees">
-            Burpees
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center center">
-      <button
-          style="margin-bottom:15px"
-          color="primary"
-          (click)="onStartTraining()"
-          mat-raised-button
-          type="submit">
-        Start
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <form
+      #trainingForm="ngForm"
+      (ngSubmit)="onStartTraining(trainingForm.value.chosenId)">
+    <mat-card fxFlex="400px" fxFlex.lt-md="100%">
+      <mat-card-title fxLayoutAlign="center center">
+        Time to start a workout!
+      </mat-card-title>
+      <mat-card-content fxLayoutAlign="center center">
+        <mat-form-field>
+          <mat-select
+              ngModel
+              name="chosenId"
+              required
+              placeholder="Choose your exercise">
+            <mat-option
+                *ngFor="let exercise of exercises"
+                [value]="exercise.id">
+              {{ exercise.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions fxLayoutAlign="center center">
+        <button
+            [disabled]="trainingForm.invalid"
+            style="margin-bottom:15px"
+            color="primary"
+            mat-raised-button
+            type="submit">
+          Start
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
