--- a/src/app/components/training/stop-training/stop-training.component.html
+++ b/src/app/components/training/stop-training/stop-training.component.html
@@ -1,18 +1,22 @@
-<h1 mat-dialog-title>Are you sure?</h1>
-<mat-dialog-content>
-  <p>You already got {{ passedData.progress }}%...</p>
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button
-      mat-raised-button
-      [mat-dialog-close]="true"
-      color="primary">
-    Yes
-  </button>
-  <button
-      mat-raised-button
-      [mat-dialog-close]="false"
-      color="primary">
-    No
-  </button>
-</mat-dialog-actions>
+<section
+    fxLayout="column"
+    fxLayoutAlign="center center">
+  <h1 mat-dialog-title>Are you sure?</h1>
+  <mat-dialog-content>
+    <p>You already got {{ passedData.progress }}%...</p>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button
+        mat-raised-button
+        [mat-dialog-close]="true"
+        color="primary">
+      Yes
+    </button>
+    <button
+        mat-raised-button
+        [mat-dialog-close]="false"
+        color="primary">
+      No
+    </button>
+  </mat-dialog-actions>
+</section>
