--- a/src/app/components/training/past-trainings/past-trainings.component.html
+++ b/src/app/components/training/past-trainings/past-trainings.component.html
@@ -19,7 +19,7 @@
       Date
     </mat-header-cell>
     <mat-cell *matCellDef="let exercise">
-      {{ exercise.date | date }}
+      {{ exercise.date }}
     </mat-cell>
   </ng-container>
 
