--- a/src/app/components/navigation/header/header.component.html
+++ b/src/app/components/navigation/header/header.component.html
@@ -7,7 +7,7 @@
     </button>
   </div>
   <div>
-    <a routerLink="/" routerLinkActive="router-link-active">LOGO</a>
+    <a routerLink="/" routerLinkActive="router-link-active">FG Fitness</a>
   </div>
   <div
       fxFlex
@@ -18,6 +18,7 @@
         fxLayout="row"
         fxLayoutGap="10px"
         class="navigation-items">
+      <li *ngIf="isAuth">User: <em>{{ loggedUser }}</em> &nbsp; &nbsp;</li>
       <li *ngIf="!isAuth"><a routerLink="/signup">Signup</a></li>
       <li *ngIf="!isAuth"><a routerLink="/login">Login</a></li>
       <li *ngIf="isAuth"><a routerLink="/training">Training</a></li>
