--- a/src/app/components/training/new-training/new-training.component.html
+++ b/src/app/components/training/new-training/new-training.component.html
@@ -12,7 +12,7 @@
         Time to start a workout!
       </mat-card-title>
       <mat-card-content
-          *ngIf="!isLoading"
+          *ngIf="!isLoading && exercises"
           fxLayoutAlign="center center">
         <mat-form-field>
           <mat-select
@@ -32,12 +32,22 @@
           *ngIf="!isLoading"
           fxLayoutAlign="center center">
         <button
+            *ngIf="exercises"
             [disabled]="trainingForm.invalid"
             style="margin-bottom: 25px"
             color="primary"
             mat-raised-button
             type="submit">
           Start
+        </button>
+        <button
+            *ngIf="!exercises"
+            (click)="fetchAvailableExercises()"
+            style="margin-bottom: 25px"
+            color="primary"
+            mat-raised-button
+            type="button">
+          Fetch Again
         </button>
       </mat-card-actions>
       <div
