--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -27,13 +27,13 @@
       </mat-error>
     </mat-form-field>
     <button
-        *ngIf="!isLoading"
+        *ngIf="!(isLoading$ | async)"
         [disabled]="!loginForm.valid"
         type="submit"
         mat-raised-button
         color="primary">
       Login
     </button>
-    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
   </form>
 </section>
