--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -54,13 +54,13 @@
       Agree to Terms and Conditions
     </mat-checkbox>
     <button
-        *ngIf="!isLoading"
+        *ngIf="!(isLoading$ | async)"
         [disabled]="form.invalid"
         type="submit"
         mat-raised-button
         color="primary">
       Sign Up
     </button>
-    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
   </form>
 </section>
