--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+// @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import './my-theme.scss';
 
 html, body {
-  font-family: 'Roboto', sans-serif;  
+  font-family: 'Roboto', sans-serif;
   height: 100%;
 }
 
